--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,6 +1,6 @@
 .hero {
   height: 80vh;
-  background: url("https://images.unsplash.com/photo-1623871300511-e938b37a9c37?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTh8fHNtYXJ0JTIwd2F0Y2h8ZW58MHx8MHx8fDA%3D") center/cover no-repeat;
+  background: url("https://plus.unsplash.com/premium_photo-1712764121254-d9867c694b81?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8c21hcnQlMjB3YXRjaHxlbnwwfHwwfHx8MA%3D%3D") center/cover no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
